--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Exchange Rates</string>
+    <string name="app_name">Rates</string>
+
     <string name="currency_australia">Australian Dollar</string>
     <string name="currency_bulgaria">Bulgarian Lev</string>
     <string name="currency_brazil">Brazilian Real</string>
