CHANGED currency names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,13 +24,13 @@
     <string name="currency_norway">Norwegian Krone</string>
     <string name="currency_new_zealand">New Zealand Dollar</string>
     <string name="currency_philippines">Philippine peso</string>
-    <string name="currency_poland">Polish złoty</string>
+    <string name="currency_poland">Polish Złoty</string>
     <string name="currency_romania">Romanian Leu</string>
     <string name="currency_russia">Russian Ruble</string>
     <string name="currency_sweden">Swedish Krona</string>
     <string name="currency_singapore">Singapore Dollar</string>
     <string name="currency_thailand">Thai Baht</string>
-    <string name="currency_turkey">Turkish lira</string>
+    <string name="currency_turkey">Turkish Lira</string>
     <string name="currency_usa">US Dollar</string>
     <string name="currency_south_africa">South African Rand</string>
     <string name="currency_europe">Euro</string>
